--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\student\\Desktop\\reboot-django-1\\venv\\Scripts\\python.exe"
 }
